--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,28 @@
   <title>HTML Portfolio</title>
 </head>
 <body>
-
-  Welcome to the HTML Portfolio Project
-
+<div class="header">
+	<h1>Cary Hellström</h1>
+	<h2>Softare Developer</h2>
+</div>
+<div class="tagline">
+	<h3>Learn More About Me</h3>
+	<p>I have experience of developing code in C# using .NET evironment wth Visual Studio and TFS, Entiity Framework, MsSQL.
+	For many years I developed testsystems and other software for production tests using National Instruments LabVIEW.
+	In the past I also have done some work in C for embedded systems, Pascal and Basic."</p>
+</div>
+<div class="skills">
+	<h3>My skills</h3>
+	<ul>
+		<li>JavaScript</li>
+		<li>HTML</li>
+		<li>C#</li>
+	</ul>
+</div>
+<div class="contact">
+	<h3>Contact Me</h3>
+	<p>The easiest way to contact me is via twitter 
+	<a href="https://twitter.com/CaryHstrom">@CaryHstrom</a></p>
+</div>
 </body>
 </html>
