Fixedd missing paragraph

--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,7 @@
 </div>
 <div class="skills">
 	<h3>My skills</h3>
+	<p>I like to work with the front-end using these tools:</p>
 	<ul>
 		<li>JavaScript</li>
 		<li>HTML</li>
